2004-04-13  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkexpander.xml Add.

	* pygtk-gtkimcontext.xml Add return value description for
	"delete-surrounding" and "retrieve-surrounding" signals.

2004-04-10  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkactiongroup.xml (add_toggle_actions) Add description of
	is_active item in toggle action tuple.
	(add_radio_actions) Add description of value and on_change parameters.
	Remove callback description from radio action tuple.

	* pygtk-gdkatom.xml Add.

	* pygtk-gdk-functions.xml (atom_intern) Remove.
	Fix dumb error.

	* pygtk-gtkclipboard.xml Add.

	* pygtk-gdk-classes.xml Add pygtk-gdkatom.xml.
	Hide unimplemented new classes

	* pygtk-gtk-classes Hide unimplemented new classes

	* pygtk-gtkaccelgroup.xml
	* pygtk-gtkbutton.xml
	* pygtk-gtkentrycompletion.xml
	* pygtk-gtkfilechooserdialog.xml
	* pygtk-gtkfontselectiondialog.xml
	* pygtk-gtkgenericcellrenderer.xml
	* pygtk-gdkatom.xml Fix some link errors.

2004-04-09  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkaction.xml Add.

	* pygtk-gtkactiongroup.xml Add.

	* pygtk-gtkborder.xml Add.

2004-04-08  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkfilefilter.xml Fix links to get_needed() method. Fix custom
	function signature and description.

	* pygtk-gtkfontbutton.xml Add.

	* pygtk-gtkfontbutton.xml Add purpose description. Fix 
	GtkFontSelectionDialog links.

	* pygtk-gtkfontselectiondialog.xml Add note about lack of font filters,
	etc. in GTK+ 2.2 and above.

	* pygtk-gtkhandlebox.xml Add "snap-edge-set" property description.
	GTK+ 2.2 and above.

	* pygtk-gtkhbuttonbox.xml Tweak the description.

2004-04-07  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkfilechooser.xml Add.
	* pygtk-gtkfilechooserdialog.xml Add.
	* pygtk-gtkfilechooserwidget.xml Add.
	* pygtk-gtkfilefilter.xml Add.

	* pygtk-gtkfilefilter.xml (add_custom) Doesn't take keyword args.

2004-04-06  John Finlay  <finlay@moeraki.com>
