@@ -5,6 +5,9 @@
 	* pygtk-gtkimcontext.xml Add return value description for
 	"delete-surrounding" and "retrieve-surrounding" signals.
 
+	* pygtk-gtkclipboard.xml Add the request_* and wait_for_targets
+	method descriptions.
+
 2004-04-10  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkactiongroup.xml (add_toggle_actions) Add description of
